fixed alignment of navigational buttons, but now My Times isn't centered..

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,3 +1,4 @@
+
 header {
   font-family: Verdana;
   font-size: 14px;
@@ -8,14 +9,15 @@ header {
   border-bottom: solid 1px black;
   display: flex;
   align-items: center;
-    }
-
+  justify-content: space-between;
+      }
+      
 #logo {
   color: MediumAquamarine;
-}
+  }
+
 
 nav span {
   display: inline-block;
   padding: 20px 10px;
-
-  }
+    }
